--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,119 @@ h2,
 h3,
 p,
 ul {
-  margin: 0;
+    margin: 0;
 }
 
 ul {
     list-style: none;
     padding: 0;
-  }
-  
-  a {
+}
+
+a {
     text-decoration: none;
     color: var(--color-text);
+}
+
+button {
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+}
+
+button:focus {
+    outline: 1px solid var(--color-accent);
+}
+
+/* Header */
+.header {
+    background-color: #050a13;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between; /*수퍙, 간격띄고 정렬*/
+    align-items: center; /*수직*/
+    z-index: 1;
+    }
+
+.header__logo {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.header__logo__img {
+    width: 36px;
+    height: 36px;
   }
+
+.header__logo__title {
+  font-size: 1.8rem;
+}
+
+.header__menu {
+    display: flex;
+    gap: 4px;
+  }
+
+.header__menu__item {
+  padding: 8px 16px;
+}
+
+.header__menu__item:hover {
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
+}
+
+.header__menu__item.active {
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
+}
+
+/* Home */
+#home {
+    background-color: var(--color-primary);
+    color: var(--color-text);
+    padding: 5rem 1rem;
+    padding-top: 7rem;
+    text-align: center;
+  }
+  
+  .home__avatar {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 100%;
+    border: 3px solid var(--color-accent);
+  }
+  
+  .home__title {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  
+  .home__title--strong {
+    color: var(--color-accent);
+  }
+  
+  .home__description {
+    font-size: 1.3rem;
+  }
+  
+  .home__contact {
+    display: inline-block;
+    background-color: var(--color-accent);
+    color: var(--color-black);
+    margin: 2rem;
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    border-radius: 4px;
+  }
+  
+  .home__contact:hover {
+    background-color: transparent;
+    color: var(--color-text);
+    outline: 2px solid var(--color-accent);
+  }
+  
