--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,29 @@ button:focus {
     outline: 1px solid var(--color-accent);
 }
 
+
+/* Common */
+.section {
+    padding: 4rem;
+    text-align: center;
+  }
+  
+.max-container {
+    max-width: var(--size-max-width);
+    margin: auto;
+}
+  
+.title {
+    font-size: 2.5rem;
+    margin: 1rem 0;
+}
+  
+.description {
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+  
+
 /* Header */
 .header {
     background-color: #050a13;
@@ -114,7 +137,7 @@ button:focus {
   .home__avatar {
     width: 250px;
     height: 250px;
-    object-fit: cover;
+    object-fit: cover; /* 이미지 비율 유지 */
     border-radius: 100%;
     border: 3px solid var(--color-accent);
   }
