--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ button:focus {
 }
   
 .description {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin: 0.5rem 0;
 }
   
@@ -171,3 +171,52 @@ button:focus {
     outline: 2px solid var(--color-accent);
   }
   
+/* sections */
+.sections{
+    max-width: 1000px;
+    margin: auto;
+
+}
+/* About */
+.introduction__bold{
+    text-align: left;
+}
+.introduction__description{
+    text-align: left;
+}
+.majors {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    margin: 2.5rem 0;
+  }
+  
+  .major {
+    flex:1;
+    max-width: 200px;
+    min-width: 150px; 
+    max-height: 200px;
+    background-color: var(--color-primary-variant);
+    padding: 2rem 1rem;
+    color: var(--color-text);
+    border-radius: 1rem;
+    cursor: default;
+    box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+  }
+  
+  .major__icon {
+    font-size: 4rem;
+    margin: 1rem 0;
+    color: var(--color-accent);
+    transition: all 300ms ease;
+  }
+  
+  .major__title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+  
+  .major:hover .major__icon {
+    transform: rotate(-15deg) scale(1.2);
+  }
