--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,19 @@ button:focus {
   
   .skills {
     display: grid;
-    flex-direction: 6rem 4rem 3rem;
-    margin: 2rem 3rem;
+    grid-template-areas: 
+        "coding coding coding" 
+        "coding coding coding" 
+        "tools language language";
+
+    gap: 1rem; /* Space between grid items */
+    margin: 2rem 0;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
 
   }
   
@@ -236,6 +247,7 @@ button:focus {
   }
   
 .skills__coding {
+  grid-area: coding;
   grid-row: span 2;
   padding: 1rem;
   margin: 1rem;
@@ -249,6 +261,7 @@ button:focus {
 }
 
 .skills__tools {
+  grid-area: tools;
   padding: 1rem;
   margin: 1rem;
   background-color: var(--color-primary);
@@ -261,11 +274,12 @@ button:focus {
   0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
-.skills_language {
+.skills__language {
+  grid-area: language;
   padding: 1rem;
   margin: 1rem;
   background-color: var(--color-primary);
-  filter: brightness(150%);
+  filter: brightness(250%);
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
@@ -273,3 +287,79 @@ button:focus {
   0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
   0 100px 80px rgba(0, 0, 0, 0.12);
 }
+
+/* skills_bar */
+.bar__box{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 8px;
+  overflow: hidden;
+}
+.bar {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem;
+    gap: 0.5rem;
+    margin: 1rem;
+    background-color: var(--color-primary);
+  filter: brightness(200%);
+  border-radius: 8px;
+  overflow: hidden;
+  }
+
+  
+  .bar__metadata {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+  }
+  
+  .bar__bg {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-primary-variant);
+}
+  
+  .bar__value {
+    height: 3px;
+    background-color: var(--color-accent);
+  }
+
+.bar__detail__text{
+    padding: 0.5rem;
+    text-align: left;
+    font-size: smaller;
+}
+
+.language__bar {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem;
+    gap: 0.5rem;
+    margin: 1rem 1rem 1rem 1rem;
+    background-color: var(--color-primary);
+  filter: brightness(150%);
+  border-radius: 8px;
+  overflow: hidden;
+  }
+
+  
+  .language__bar__metadata {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+  }
+  
+  .language__bar__bg {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-primary-variant);
+}
+  
+  .language__bar__value {
+    height: 3px;
+    background-color: var(--color-accent);
+  }
