--- a/css/style.css
+++ b/css/style.css
@@ -338,8 +338,8 @@ button:focus {
     flex-direction: column;
     width: 100%;
     padding: 1rem;
-    gap: 0.5rem;
-    margin: 1rem 1rem 1rem 1rem;
+    gap: 1rem;
+    margin: 1rem 0rem;
     background-color: var(--color-primary);
   filter: brightness(150%);
   border-radius: 8px;
@@ -363,3 +363,8 @@ button:focus {
     height: 3px;
     background-color: var(--color-accent);
   }
+
+.language_desr{
+    font-weight: 100;
+    font-style: italic;
+}
