--- a/css/style.css
+++ b/css/style.css
@@ -408,14 +408,27 @@ button:focus {
     border-radius: 8px;
     padding: 1rem;
     text-align: left;
+    margin: 0 0 1rem 0;
 }
 
 .project_link_list{
     text-decoration: underline;
     margin: 0 1rem;
-    list-style-type: disc;
+    list-style-type: "\1F517" ;
 }
 
+.project_feature{
+    background-color: var(--color-primary-variant); /* Optional: Styling */
+    filter: brightness(150%);
+    border-radius: 8px;
+    padding: 1rem;
+    text-align: left;
+}
+
+.project_feature_list{
+    margin: 0 1rem;
+    list-style-type: "\2713";
+}
 .project_photos {
     display: flex;
     justify-content: space-between; /* Space between the images */
@@ -434,3 +447,4 @@ button:focus {
     border-radius: 8px;
     padding: 5px;
 }
+
