CSS_project1_skills

--- a/css/style.css
+++ b/css/style.css
@@ -477,8 +477,12 @@ button:focus {
 
 
 .project_skills_list{
-    margin: 0.5rem 1rem;
+    margin: 1rem;
     list-style-type: disc;
     font-size: 1rem;
     font-weight: 100;
+}
+
+.project_skills_list_item{
+    margin: 1rem 0;
 }
