--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,7 @@ button:focus {
 }
 
 .thesis_title{
+    color: var(--color-accent);
     margin: 1rem;
     font-size: large;
 }
@@ -608,4 +609,44 @@ button:focus {
 .thesis_desc_list{
     margin: 1rem 0;
     text-align: left;
+}
+
+/* Education */
+.edu_container{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+}
+.edu{
+    width: 800px;
+    background-color: #8a8d91;
+    padding: 1rem;
+    color: var(--color-text);
+    border-radius: 1rem;
+    cursor: default;
+    box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    margin: 1rem;
+    line-height: 150%;
+}
+
+.edu_img img{
+    margin: 1rem;
+    height: 80px; 
+    width: 80px;
+}
+
+.edu_desc{
+    padding: 1rem;
+    margin: 0.5rem 0 0 0;
+    line-height: 160%;
+}
+
+.edu_title{
+    color: var(--color-primary);
+    font-size: 1.4rem;
+    font-weight: bold;
 }
