--- a/css/style.css
+++ b/css/style.css
@@ -618,7 +618,7 @@ button:focus {
     align-items: center;
     flex-direction: column;
 }
-.edu{
+.edu_item{
     width: 800px;
     background-color: #8a8d91;
     padding: 1rem;
@@ -647,6 +647,48 @@ button:focus {
 
 .edu_title{
     color: var(--color-primary);
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+/* additional skills */
+#experience {
+    background-color: var(--color-primary-variant);
+    color: var(--color-text);
+  }
+
+.exp_container{
+    background-color: var(--color-primary);
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+    border-radius: 1rem;
+}
+
+.exp_item{
+    
+    padding: 0 1rem;
+    color: var(--color-text);
+    border-radius: 1rem;
+    cursor: default;
+    box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    margin: 1rem;
+    line-height: 150%;
+    text-align: left;
+}
+
+.exp_img img{
+    margin: 1rem;
+    height: 80px; 
+    width: 250px;
+}
+
+
+.exp_title{
     font-size: 1.4rem;
     font-weight: bold;
 }
