--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ button:focus {
 .introduction__bold{
     text-align: left;
 }
-.introduction__description{
+#introduction .description{
     text-align: left;
 }
 .majors {
@@ -200,7 +200,7 @@ button:focus {
   
   .major {
     flex:1;
-    max-width: 300px;
+    width: 300px;
     min-width: 150px; 
     max-height: 300px;
     background-color: var(--color-primary-variant);
@@ -472,17 +472,18 @@ button:focus {
 } */
 
 
+
 .project_photos {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     justify-items: center;
-    /* display: flex;
-    justify-content: space-between;  */
+    align-items: 1rem;
     gap: 1rem;
 }
 
 .project_img_box {
-    /* flex: 1;  */
+    width: 100%; /* Set image boxes to full width of grid column */
+    
     text-align: center; /* Center-align the image and text */
 
 }
@@ -683,7 +684,7 @@ button:focus {
 #experience {
     background-color: #1a2f4d;
     color: var(--color-text);
-  }
+}
 
 .exp_container{
     background-color: #0c192f;
@@ -748,3 +749,105 @@ button:focus {
     transition: font-size 0.3s ease-in-out, color 0.3s  ease-in-out; /* Smooth transition */
 
 }
+
+@media screen and (max-width: 768px) {
+.section {
+    padding: 3rem 2rem;
+}
+
+.title {
+    font-size: 2rem;
+}
+
+    .description {
+    font-size: 1rem;
+}
+
+    .header {
+      flex-direction: column;
+      align-items: start;
+    }
+  
+    .header__menu {
+      flex-direction: column;
+      text-align: center;
+      padding: 1rem 4rem;
+      gap: 1rem;
+    }
+  
+    .header__nav {
+      width: 100%;
+    }
+  
+    #home {
+      padding-bottom: 3rem;
+    }
+  
+    .home__title {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+  
+    .majors {
+      flex-direction: row;
+      align-items: center;
+    }
+  
+    .major {
+      width: 250px;
+    }
+
+    .major__hard__detail{
+        font-size: 1rem;
+        line-height: 1.1rem;
+    }
+  
+    .job {
+      justify-content: center;
+    }
+  
+    .skills {
+      grid-template-columns: 1fr;
+    }
+  
+    .categories {
+      flex-direction: column;
+    }
+  
+    .category {
+      width: 100%;
+    }
+  
+    /* .project_photos {
+        max-width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(100px, 2fr));
+        justify-items: center;
+        gap: 1rem;
+    }
+
+
+    .project_img{
+            max-width: 100%; 
+            height: auto;
+            border-radius: 8px;
+            padding: 5px;
+        } */
+  
+    .testimonial {
+      flex-direction: column;
+    }
+  
+    .testimonial:nth-child(even) .testimonial__img {
+      order: 0;
+    }
+  
+    .arrow-up {
+      font-size: 2rem;
+      width: 3rem;
+      height: 3rem;
+      bottom: 1.5rem;
+      right: 1.5rem;
+    }
+  }
+  
