--- a/css/style.css
+++ b/css/style.css
@@ -667,25 +667,31 @@ button:focus {
 
 /* Education */
 .edu_container{
+    
     display: flex;
     justify-content: center; 
     align-items: center;
     flex-direction: column;
 }
 .edu_item{
-    width: 900px;
+    display: flex;
+    flex: 1;
+    width: 100%;
+    max-width: 100%;
+    
     background-color: #9ba3b0;
     padding: 0 1rem;
     color: var(--color-text);
     border-radius: 1rem;
     cursor: default;
     box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
-    display: flex;
+    
     align-items: stretch;
     justify-content: center;
     margin: 1rem;
     line-height: 150%;
 }
+
 
 .edu_img img{
     margin: 1rem;
@@ -826,6 +832,8 @@ button:focus {
         font-size: 1rem;
         line-height: 1.1rem;
     }
+
+
   
     .job {
       justify-content: center;
@@ -842,31 +850,11 @@ button:focus {
     .category {
       width: 100%;
     }
-  
-    /* .project_photos {
-        max-width: 100%;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(100px, 2fr));
-        justify-items: center;
-        gap: 1rem;
-    }
 
 
-    .project_img{
-            max-width: 100%; 
-            height: auto;
-            border-radius: 8px;
-            padding: 5px;
-        } */
-  
-    .testimonial {
-      flex-direction: column;
-    }
-  
-    .testimonial:nth-child(even) .testimonial__img {
-      order: 0;
-    }
-  
+
+
+
     .arrow-up {
       font-size: 2rem;
       width: 3rem;
