--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ button:focus {
 
 /* Header */
 .header {
-    background-color: #050a13;
+    background-color: transparent;
     position: fixed;
     top: 0;
     width: 100%;
@@ -101,7 +101,13 @@ button:focus {
     justify-content: space-between; /*수퍙, 간격띄고 정렬*/
     align-items: center; /*수직*/
     z-index: 1;
+    transition: all 300ms ease;
     }
+
+.header--dark{
+    background-color: var(--color-primary);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
 .header__logo {
     display: flex;
@@ -626,7 +632,7 @@ button:focus {
 
 .title_box{
     display: flex;
-    align-items: stretch;
+    align-items: center;
     justify-content: center;
 }
 
@@ -735,15 +741,20 @@ button:focus {
     border-radius: 1rem;
     cursor: default;
     display: flex;
-    align-items: stretch;
+    align-items: center;
     justify-content: center;
     margin: 1rem;
     line-height: 150%;
     text-align: left;
 }
 
+
+
 .exp_img img{
-    margin: 1rem;
+    background-color: white;
+    border-radius: 8px;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem 3rem 0.5rem 1rem;
     height: 80px; 
     width: 250px;
 }
@@ -866,8 +877,36 @@ button:focus {
       width: 100%;
     }
 
+    .certificate_comptia{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem 0 0 0;
+    }
 
+    .edu_item{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .edu_desc{
+        padding: 0 0 1rem 0;
+        margin: 0;
+        line-height: 160%;
+    }
 
+    .exp_item{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .exp_img img{
+        
+        margin: 0.5rem 1rem;
+     
+    }
 
 
     .arrow-up {
