--- a/css/style.css
+++ b/css/style.css
@@ -785,6 +785,8 @@ button:focus {
 
 .contact_item:hover{
     color: var(--color-accent);
+    transition: font-size 0.3s ease-in-out, color 0.3s  ease-in-out; /* Smooth transition */
+
 }
 
 .contact_link:hover{
@@ -793,6 +795,27 @@ button:focus {
     transition: font-size 0.3s ease-in-out, color 0.3s  ease-in-out; /* Smooth transition */
 
 }
+
+/* arrow */
+.arrow-up {
+    background-color: var(--color-primary);
+    position: fixed;
+    bottom: 3rem;
+    right: 3rem;
+    font-size: 3rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 100%;
+    text-align: center;
+  }
+
+.arrow-up:hover{
+    transition: all 300ms;
+    box-shadow: 5px 5px 0px 0px var(--color-accent);
+
+}
+
+/* mediaquery */
 
 @media screen and (max-width: 768px) {
 .section {
