--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,14 @@ button:focus {
   border-radius: 4px;
 }
 
+@media screen and (max-width: 1232px) {
+    .header__logo__title{
+        font-size: 1rem;
+    }
+}
+
+
+
 /* Home */
 #home {
     background-color: var(--color-primary);
@@ -844,6 +852,10 @@ button:focus {
   
     .header__nav {
       width: 100%;
+    }
+
+    .header__logo__title{
+        font-size: 1.8rem;
     }
   
     #home {
