--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ button:focus {
     font-style: italic;
 }
 
+
 /* Header */
 .header {
     background-color: transparent;
@@ -153,6 +154,10 @@ button:focus {
 .header__menu__item.active {
   border: 1px solid var(--color-accent);
   border-radius: 4px;
+}
+
+.header__menu__item.visible{
+    background-color: red;
 }
 
 @media screen and (max-width: 1232px) {
@@ -291,8 +296,6 @@ button:focus {
         0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
         0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
         0 100px 80px rgba(0, 0, 0, 0.12);
-    background-color: var(--color-primary);
-    
   }
   
   .skills__title {
